--- a/login.html
+++ b/login.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Login</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Login — Vehicle Finance</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="login-body">
-<div class="login-card">
-<h2>Vehicle Finance Login</h2>
-<input id="username" placeholder="Phone Number">
-<input id="password" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
-<p id="error"></p>
-</div>
+<body class="page-login">
+  <main class="center-card">
+    <div class="brand">
+      <div class="logo">V</div>
+      <div>
+        <h1>Vehicle Finance</h1>
+        <p class="muted">Sign in to view records</p>
+      </div>
+    </div>
+
+    <div class="card card-sm">
+      <label class="field"><span>Phone</span><input id="username" placeholder="e.g. 9492126272" autocomplete="username"></label>
+      <label class="field"><span>Password</span><input id="password" type="password" autocomplete="current-password"></label>
+      <div class="row" style="gap:8px;">
+        <button class="btn primary" onclick="login()">Sign in</button>
+        <button class="btn ghost" onclick="demo()">Demo</button>
+      </div>
+      <p id="error" class="error"></p>
+      <p class="small muted">Use one of the seeded accounts. This is a read-only viewer.</p>
+    </div>
+    <footer class="small muted">Built for mobile-first viewing • Static CSV data</footer>
+  </main>
+
 <script src="js/auth.js"></script>
 </body>
 </html>
