--- a/view.html
+++ b/view.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Vehicle Details</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Vehicle Details — Vehicle Finance</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="requireLogin(); loadView();">
-<button onclick="history.back()">← Back</button>
-<h2 id="title"></h2>
-<div id="info"></div>
-<h3>EMI</h3>
-<table id="emi"><tr><th>No</th><th>Date</th><th>Amount</th><th>Status</th></tr></table>
+<header class="topbar">
+  <div class="container topbar-inner">
+    <div class="brand-left">
+      <div class="logo-sm">V</div>
+      <div class="title-small">Vehicle Details</div>
+    </div>
+    <div class="top-actions">
+      <button class="btn outline" onclick="logout()">Logout</button>
+    </div>
+  </div>
+</header>
+
+<main class="container">
+  <button class="btn ghost" onclick="history.back()">← Back</button>
+  <div id="vehicleCard" class="card detail-card"></div>
+  <div id="sellerCard" class="card"></div>
+  <div id="buyerCard" class="card"></div>
+  <div class="card">
+    <h3>EMI Schedule</h3>
+    <table class="table" id="emiTable"><thead><tr><th>#</th><th>Due</th><th>Amount</th><th>Status</th></tr></thead><tbody></tbody></table>
+  </div>
+</main>
+
 <script src="js/auth.js"></script>
 <script src="js/data.js"></script>
 <script src="js/view.js"></script>
