--- a/view.html
+++ b/view.html
@@ -35,7 +35,20 @@
       <!-- small back inside EMI card removed on purpose as requested -->
     </div>
     <h3>EMI Schedule</h3>
-    <table class="table" id="emiTable"><thead><tr><th>#</th><th>Due</th><th>Amount</th><th>Status</th></tr></thead><tbody></tbody></table>
+    <table class="table" id="emiTable">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Due Date</th>
+      <th>Amount</th>
+      <th>Status</th>
+      <th>Delay (days)</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+
   </div>
 </main>
 
