adding buyer information

--- a/view.html
+++ b/view.html
@@ -22,8 +22,11 @@
 
   <div class="card" id="sellerCard">Loading seller...</div>
 
+  <!-- Buyer Information -->
+  <div class="card" id="buyerCard">Loading buyer...</div>
+
   <div class="card">
-    <h3>Buyer & EMI</h3>
+    <h3>EMI Schedule</h3>
     <table class="table" id="emiTable">
       <thead>
         <tr>
