emi table improvement

--- a/view.html
+++ b/view.html
@@ -47,8 +47,8 @@
   try { requireAuth(); } catch(e){ console.warn("auth check:", e); }
   try { renderTopbarAuth(); } catch(e){ console.warn("renderTopbarAuth failed:", e); }
 </script>
-<script src="js/data.js"></script>
-<script src="js/view.js"></script>
+<script src="js/data.js?v=20260201"></script>
+<script src="js/view.js?v=20260201"></script>
 <script>document.addEventListener('DOMContentLoaded', ()=>{ loadView().catch(console.error); });</script>
 </body>
 </html>
