dealy (days) removed

--- a/view.html
+++ b/view.html
@@ -34,7 +34,7 @@
           <th>Due Date</th>
           <th>Amount</th>
           <th>Status</th>
-          <th>Delay (days)</th>          
+          <th>Delay</th>          
         </tr>
       </thead>
       <tbody></tbody>
