search bar improvement

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="card">
     <div class="controls">
       <div class="left" style="width:100%;">
-        <input id="search" placeholder="Search name / brand / model / vehicle number" oninput="applyFilters()" />
+        <input id="search" class="search-input" placeholder="Search name / brand / model / vehicle number" oninput="applyFilters()" />
       </div>
     </div>
 
