Add seller comments and CSV download icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="logo-sm">V</div>
       <div class="title">Vehicle Finance</div>
     </div>
-    <div class="top-actions"></div>
+    <div class="top-actions">
+      <button class="btn ghost icon-btn" type="button" onclick="downloadCSVs()" aria-label="Download CSVs" title="Download CSVs">⬇</button>
+    </div>
   </div>
 </header>
 
