--- a/view.html
+++ b/view.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vehicle Details</title>
+  <title>SVLF — Vehicle Details</title>
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#0b1532">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="topbar">
   <div class="container topbar-inner">
     <div class="brand-left">
-      <a href="index.html" style="color:white;text-decoration:none"><div class="logo-sm">V</div></a>
+      <a href="index.html" style="color:white;text-decoration:none"><div class="logo-sm">S</div></a>
       <div class="title">Vehicle Details</div>
     </div>
     <div class="top-actions"></div>
