--- a/login.html
+++ b/login.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login — Vehicle Finance</title>
+  <title>Login — SVLF</title>
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#0b1532">
   <link rel="stylesheet" href="css/style.css">
   <style>
     .login-center{max-width:420px;margin:36px auto;padding:18px}
@@ -16,7 +18,7 @@
 <body>
 <header class="topbar">
   <div class="container topbar-inner">
-    <div class="brand-left"><div class="logo-sm">V</div><div class="title">Vehicle Finance</div></div>
+    <div class="brand-left"><div class="logo-sm">S</div><div class="title">SVLF</div></div>
     <div class="top-actions"></div>
   </div>
 </header>
