--- a/login.html
+++ b/login.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login — SVLF</title>
+  <link rel="icon" href="assets/svlf-icon.png">
+  <link rel="apple-touch-icon" href="assets/svlf-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#0b1532">
-  <link rel="stylesheet" href="css/style.css">
   <style>
     .login-center{max-width:420px;margin:36px auto;padding:18px}
     form.login-form label{display:block;margin-top:8px;font-weight:600;color:#0f172a}
