--- a/view.html
+++ b/view.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SVLF — Vehicle Details</title>
+  <link rel="icon" href="assets/svlf-icon.png">
+  <link rel="apple-touch-icon" href="assets/svlf-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#0b1532">
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="topbar">
