--- a/view.html
+++ b/view.html
@@ -8,6 +8,7 @@
   <link rel="apple-touch-icon" href="assets/svlf-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#0b1532">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="topbar">
