Update dashboard filters, counts, and vehicle detail UI styling

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     </div>
 
     <div style="display:flex;gap:8px;margin-top:10px;">
-      <div class="type-card active" id="typeAll" data-type="ALL" onclick="onTypeCardClick(event)">All</div>
       <div class="type-card" id="typeCar" data-type="Car" onclick="onTypeCardClick(event)">Cars</div>
-      <div class="type-card" id="typeBike" data-type="Bike" onclick="onTypeCardClick(event)">Bikes</div>
+      <div class="type-card active" id="typeBike" data-type="Bike" onclick="onTypeCardClick(event)">Bikes</div>
     </div>
   </section>
 
