--- a/view.html
+++ b/view.html
@@ -22,6 +22,7 @@
 </header>
 
 <main class="container">
+  <a class="btn big-back-btn" href="index.html" aria-label="Back to home">← Back to Home</a>
   <div class="card detail-card" id="vehicleCard">Loading...</div>
 
   <div class="card" id="sellerCard">Loading seller...</div>
