New data Entry 8thFeb2026

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
     </form>
 
     <div class="login-note">
-      This is a read-only site. Login is client-side only (keeps data private from casual visitors). Do NOT use production secrets here.
+      This is a read-only site. 
     </div>
   </div>
 </main>
